k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reddit-clone-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: reddit-clone
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31000
